@@ -22,26 +22,26 @@
  */
 
 /**
- * This is the class upgradescript
+ * This is the abstract class upgradescript
  */
-class upgradescript {
+abstract class upgradescript {
 	protected $from_version = '9999.99.99'; //set this default ridiculously high so that it NEVER runs
 	protected $to_version = '9999.99.99'; //set this default to something ridiculously high so it always runs
 
 	/**
-	 * name/title of upgrade script
+	 * The name/title of upgrade script
 	 * @return string
 	 */
 	function name() { return "Base Model for the Upgrade Scripts"; }
 
 	/**
-	 * generic description of upgrade script
+	 * The generic description of upgrade script
 	 * @return string
 	 */
 	function description() { return gt("This Script attempts to")." ".$this->name(); }
 
 	/**
-	 * test version number (upgrade script requirements vs database version) to see if upgrade script should be run
+	 * This routine should simply test version number (upgrade script requirements vs database version) to see if upgrade script should be run
 	 * @param object $version
 	 * @return bool
 	 */
@@ -72,7 +72,7 @@ class upgradescript {
 	}
 
 	/**
-	 * additional test(s) to see if upgrade script should be run
+	 * This routine should perform additional test(s) to see if upgrade script should be run (files/tables exist, etc...)
 	 * @return bool
 	 */
 	function needed() {
@@ -80,7 +80,7 @@ class upgradescript {
 	}
 
 	/**
-	 * main routine of upgrade script to upgrade Exponent
+	 * The main routine of upgrade script which is run to upgrade Exponent
 	 * @return bool
 	 */
 	function upgrade() {
