@@ -253,12 +253,12 @@ RECORD:O:8:"stdClass":8:{s:2:"id";s:1:"1";s:6:"module";s:4:"news";s:3:"src";s:20
 RECORD:O:8:"stdClass":8:{s:2:"id";s:1:"2";s:6:"module";s:4:"blog";s:3:"src";s:20:"@random48e7cdc1a672d";s:10:"feed_title";s:16:"My Blog RSS Feed";s:9:"feed_desc";s:22:"An RSS Feed of My Blog";s:10:"enable_rss";s:1:"1";s:9:"rss_limit";s:2:"24";s:13:"rss_cachetime";s:4:"1440";}
 RECORD:O:8:"stdClass":8:{s:2:"id";s:1:"3";s:6:"module";s:12:"filedownload";s:3:"src";s:20:"@random48e7e2d9363ce";s:10:"feed_title";s:24:"My File Download Podcast";s:9:"feed_desc";s:28:"Podcast of My File Downloads";s:10:"enable_rss";s:1:"1";s:9:"rss_limit";s:2:"24";s:13:"rss_cachetime";s:4:"1440";}
 
-TABLE:faqs
+TABLE:faq
 RECORD:O:8:"stdClass":12:{s:2:"id";s:1:"1";s:8:"question";s:24:"What does FAQ stand for?";s:6:"answer";s:61:"<p>The acronym FAQ stands for Frequently Asked Questions.</p>";s:14:"include_in_faq";s:1:"1";s:14:"submitter_name";s:7:"Unknown";s:15:"submitter_email";s:19:"address@website.com";s:4:"rank";s:1:"3";s:6:"poster";s:1:"1";s:6:"editor";s:1:"0";s:10:"created_at";s:10:"1314141112";s:9:"edited_at";s:10:"1314141112";s:13:"location_data";s:94:"O:8:"stdClass":3:{s:3:"mod";s:3:"faq";s:3:"src";s:20:"@random48e7efc88bca6";s:3:"int";s:0:"";}";}
 RECORD:O:8:"stdClass":12:{s:2:"id";s:1:"2";s:8:"question";s:24:"What does CMS stand for?";s:6:"answer";s:60:"<p>The acronym CMS stands for Content Management System.</p>";s:14:"include_in_faq";s:1:"1";s:14:"submitter_name";s:7:"Unknown";s:15:"submitter_email";s:19:"address@website.com";s:4:"rank";s:1:"1";s:6:"poster";s:1:"1";s:6:"editor";s:1:"0";s:10:"created_at";s:10:"1314141112";s:9:"edited_at";s:10:"1314141112";s:13:"location_data";s:94:"O:8:"stdClass":3:{s:3:"mod";s:3:"faq";s:3:"src";s:20:"@random48e7efc88bca6";s:3:"int";s:0:"";}";}
 RECORD:O:8:"stdClass":12:{s:2:"id";s:1:"3";s:8:"question";s:44:"What's the deal with all this wacky content?";s:6:"answer";s:457:"<p>Squalor, old no cheatin' commencin' crazy. Java pappy pudneer quarrel gospel townfolk hayseed, right boxcar kickin' afford sheep fightin' mobilehome. Poor creosote moonshine yeehaw tax-collectors round-up heffer, plug-nickel and mush him wild, poor, barrel. Him, gospel how go drinkin' where.</p>\r\n<p>Content like this and other funny greek content can be found at <a href="http://www.duckisland.com/GreekMachine.asp" target="_blank">Duck Island</a>.</p>";s:14:"include_in_faq";s:1:"1";s:14:"submitter_name";s:7:"Unknown";s:15:"submitter_email";s:19:"address@website.com";s:4:"rank";s:1:"2";s:6:"poster";s:1:"1";s:6:"editor";s:1:"0";s:10:"created_at";s:10:"1314141112";s:9:"edited_at";s:10:"1314141112";s:13:"location_data";s:94:"O:8:"stdClass":3:{s:3:"mod";s:3:"faq";s:3:"src";s:20:"@random48e7efc88bca6";s:3:"int";s:0:"";}";}
 
-TABLE:filedownloads
+TABLE:filedownload
 RECORD:O:8:"stdClass":13:{s:2:"id";s:1:"1";s:5:"title";s:11:"Example PDF";s:7:"sef_url";s:11:"example-pdf";s:10:"meta_title";s:0:"";s:13:"meta_keywords";s:0:"";s:16:"meta_description";s:0:"";s:4:"body";s:41:"<p>Here is an example PDF resource.</p>\r\n";s:6:"poster";s:1:"1";s:9:"downloads";s:1:"0";s:4:"rank";s:1:"2";s:10:"created_at";s:10:"1223156516";s:9:"edited_at";s:10:"1328922660";s:13:"location_data";s:104:"O:8:"stdClass":3:{s:3:"mod";s:12:"filedownload";s:3:"src";s:20:"@random48e7e2d9363ce";s:3:"int";s:0:"";}";}
 RECORD:O:8:"stdClass":13:{s:2:"id";s:1:"2";s:5:"title";s:23:"Example Open Office Doc";s:7:"sef_url";s:23:"example-open-office-doc";s:10:"meta_title";s:0:"";s:13:"meta_keywords";s:0:"";s:16:"meta_description";s:0:"";s:4:"body";s:117:"<p>The Exponent Resource Manager can handle a wide variety of file types, not just images and plain text files.</p>\r\n";s:6:"poster";s:1:"1";s:9:"downloads";s:1:"0";s:4:"rank";s:1:"1";s:10:"created_at";s:10:"1223156574";s:9:"edited_at";s:10:"1328922677";s:13:"location_data";s:104:"O:8:"stdClass":3:{s:3:"mod";s:12:"filedownload";s:3:"src";s:20:"@random48e7e2d9363ce";s:3:"int";s:0:"";}";}
 
